--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
   --buttons-color: #4d5ae5;
   --color-hover-focus: #404bbf;
   --secondary-bg-tx-color: #f4f4fd;
+  --border-color: #e7e9fc;
 }
 .visually-hidden {
   position: absolute;
@@ -66,16 +67,14 @@ img {
   display: block;
 }
 
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+section {
+  margin-top: 120px;
+  margin-bottom: 120px;
 }
 .container {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  /* outline: 2px solid red;
-  outline-offset: -2px; */
 }
 /* Шапка сторінки */
 .header {
@@ -86,7 +85,7 @@ img {
   width: 1158px;
   height: 71px;
   padding: 15px;
-  border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid var(--border-color);
   align-items: center;
 }
 .header-nav {
@@ -159,6 +158,15 @@ main {
   background: var(--title-text-backgroud-color);
   padding-top: 188px;
   padding-bottom: 188px;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),  url('../images/people-office.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  text-align: center;
+  margin-top: 0;
 }
 .hero-title {
   font-family: var(--font-family2);
@@ -184,10 +192,12 @@ main {
   display: block;
   margin: 0 auto;
   margin-top: 48px;
+  outline: transparent;
 }
 .hero-button:hover,
 .hero-button:focus {
   background-color: var(--color-hover-focus);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 /* Секція з рішеннями */
 .section-features {
@@ -195,6 +205,16 @@ main {
   margin-bottom: 120px;
   margin-left: 156px;
   margin-right: 156px;
+}
+.features-icon{
+  width: 264px;
+  height: 112px;
+  background: var(--secondary-bg-tx-color);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 8px;
 }
 .feature-list {
   display: flex;
@@ -220,16 +240,12 @@ main {
 /* Секція "Що ми робимо?" */
 .flex-container {
   display: flex;
-  /* justify-content: space-between; */
   gap: 24px;
 }
 .photo {
-  border: 1px solid #e7e9fc;
+  border: 1px solid var(--border-color);
   max-width: 360px;
   max-height: 300px;
-}
-.section-items {
-  margin-bottom: 120px;
 }
 
 .section-title {
@@ -244,16 +260,17 @@ main {
 .team {
   background: var(--secondary-bg-tx-color);
   height: 732px;
+  padding-top: 120px;
 }
 .card {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
+  height: 428px;
 }
 .card-content {
   background-color: var(--accent-color);
   width: 264px;
-  height: 120px;
   text-align: center;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -261,6 +278,7 @@ main {
   flex-direction: column;
   justify-content: center;
   gap: 8px;
+  border-radius: 0px 0px 4px 4px;
 }
 .name {
   font-weight: 500;
@@ -274,7 +292,64 @@ main {
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
 }
+.card-icons-list{
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+.social-link-icon{
+  background-color: var(--buttons-color);
+  border-radius: 50%;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+}
+.card-icons-list .social-link-icon:hover{
+  background-color: var(--color-hover-focus);
+}
+/* Секція Customers */
+.customers-icon-list{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 24px;
+  padding: 0px;
+}
+.customers-icon{
+  width: 168px;
+  height: 88px;
+  border: 1px solid #8E8F99;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: transparent;
+}
+.customers-icon-link{
+  color: #8E8F99;
+}
+.logo-icon{
+  color: currentColor;
+} 
+
+.customers-icon-list .logo-icon:hover ,
+.customers-icon-list .logo-icon:focus{
+  fill: var(--color-hover-focus);
+}
+.customers-icon-list .customers-icon:hover,
+.customers-icon-list .customers-icon:hover{
+  border: 1px solid var(--color-hover-focus);
+}
+
 /* Підвал сторінки */
+.footer-list{
+  display: flex;
+  flex-direction: row;
+  gap: 120px;
+}
 .logo2 {
   font-family: var(--font-family1);
   color: var(--secondary-bg-tx-color);
@@ -292,25 +367,42 @@ main {
   width: 264px;
   margin-top: 16px;
 }
+.footer-title{
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  padding-bottom: 16px;
+}
+.social-link-icon-footer{
+  background-color: var(--primary-text-color);
+  border-radius: 50%;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.card-icons-list .social-link-icon-footer:hover{
+  background-color: #31D0AA;
+}
+
 footer {
   background: var(--title-text-backgroud-color);
   padding-top: 100px;
   padding-bottom: 100px;
 }
 /*Портфоліо */
-.cards-page{
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
 .buttons {
   display: flex;
   justify-content: center;
   gap: 24px;
   margin-bottom: 72px;
+  outline: transparent;
 }
 .button {
   background: var(--secondary-bg-tx-color);
-  border: 1px solid #e7e9fc;
+  border: 1px solid var(--border-color);
   color: var(--buttons-color);
   font-weight: 500;
   line-height: 1.5;
@@ -318,11 +410,13 @@ footer {
   text-align: center;
   padding: 12px 24px;
   border-radius: 4px;
+  outline: transparent;
 }
 .button:hover,
 .button:focus {
   background: var(--color-hover-focus);
   color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .card-set {
   display: flex;
@@ -332,13 +426,16 @@ footer {
 .card-item {
   flex-basis: calc((100% - 48px) / 3);
 }
+.card-set .card-item:hover{
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 .card-text {
   width: 360px;
   height: 120px;
   padding-top: 32px;
   padding-bottom: 32px;
   padding-left: 16px;
-  border: 1px solid #e7e9fc;
+  border: 1px solid var(--border-color);
   border-top: 0;
 }
 .project-title {
